--- a/latex/master.tex
+++ b/latex/master.tex
@@ -98,26 +98,26 @@ pdfpagemode= UseOutlines,
 \addcontentsline{toc}{chapter}{Glossaire}
 \input{glossaire}
 %---------------------------------------
-% \begin{thebibliography}{9}
-% \input{bibliographie}
-% \end{thebibliography}
-% 
-% \bibliographystyle{alpha}
-% \begin{btSect}{webographie}
-% \section*{Webographie}
-% \section*{Citées}
-% \btPrintCited
-% \section*{Non citées}
-% \btPrintNotCited
-% \end{btSect}
-% 
-% \begin{btSect}{references}
-% \section*{Références}
-% \section*{Citées}
-% \btPrintCited
-% \section*{Non citées}
-% \btPrintNotCited
-% \end{btSect}
+ \begin{thebibliography}{9}
+ \input{bibliographie}
+ \end{thebibliography}
+ 
+ \bibliographystyle{alpha}
+ \begin{btSect}{webographie}
+ \section*{Webographie}
+ \section*{Citées}
+ \btPrintCited
+ \section*{Non citées}
+ \btPrintNotCited
+ \end{btSect}
+ 
+ \begin{btSect}{references}
+ \section*{Références}
+ \section*{Citées}
+ \btPrintCited
+ \section*{Non citées}
+ \btPrintNotCited
+ \end{btSect}
 %---------------------------------------
 \appendix
 \input{titlepage2}
