--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -111,11 +111,16 @@ Adaptateur : 44Ko
 DTD, xinclude
 
 \section{Au delà du sujet}
-Une fois l'objectif du projet atteint, nous avons décidé d'accepter l'offre de Julien Ponge en devenant contributeurs officiels du projet. Au même moment, nos apports étaient intégrés au dépot officiels et se retrouveront dans la prochaine version 4.3.
+Une fois l'objectif du projet atteint, nous avons décidé d'accepter l'offre de Julien Ponge en devenant contributeurs officiels du projet. Au même moment, nos apports étaient intégrés au dépot officiel et se retrouveront dans la prochaine version 4.3.
 
 \subsection{Suivi de nos apports}
-Etant désormais développeur sur le projet IzPack nous avons pu suivre et corriger les problèmes rencontrés par la communauté de IzPack.
+Etant désormais développeurs sur le projet IzPack nous avons pu suivre et corriger les problèmes rencontrés par la communauté de IzPack.
+Nous avons par exemple corrige un test unitaire sur les numeros de ligne echouant \cite{IZPACK-306} ou un probleme de chemin d'inclusion de xml \cite{IZPACK-303}.
 
 \subsection{Correction de bugs}
+Nous avons egalement corrige plusieurs bugs.
+\begin{itemize}
+ \item Un bug cache dans l'installation automatique la faisait quitter silencieusement \cite{IZPACK-309}
+\end{itemize}
 
 \subsection{Ajout/Amélioration}
