--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,6 +1,12 @@
-@PhdThesis{theseIntro,
-author = {Hermanpreet Singh},
-title = {Introspective C++},
-school = {Virginia Polytechnic Institute and State University},
-year = {2004}
+@Misc{IZPACK-303,
+note = {\url{http://jira.codehaus.org/browse/IZPACK-303}},
+title = {Jira, bug IZPACK-303}
+}
+@Misc{IZPACK-306,
+note = {\url{http://jira.codehaus.org/browse/IZPACK-306}},
+title = {Jira, bug IZPACK-306}
+}
+@Misc{IZPACK-309,
+note = {\url{http://jira.codehaus.org/browse/IZPACK-309}},
+title = {Jira, bug IZPACK-309}
 }
