--- a/latex/webographie.bib
+++ b/latex/webographie.bib
@@ -1,32 +1,8 @@
-@Misc{informit,
-note = {http://www.informit.com/guides/content.aspx?g=cplusplus\&seqNum=120},
-title = {Constituants de la RTTI}
+@Misc{javadoc,
+note = {\url{http://java.sun.com/j2se/1.5.0/docs/api/}},
+title = {Documentation de Java}
 }
-@Misc{garret.ru,
-note = {http://garret.ru/cppreflection/docs/reflect.html},
-title = {Réflexivité en C++}
-}
-@Misc{Reflex,
-note = {http://seal-reflex.web.cern.ch/seal-reflex/index.html},
-title = {Librairie C++ ajoutant la réflexivité, fait partie du projet ROOT}
-}
-@Misc{Opencxx,
-note = {http://opencxx.sourceforge.net/},
-title = {Précompilateur C++}
-}
-@Misc{dicoDev,
-note = {http://dico.developpez.com},
-title = {Dictionnaire de developpez.com}
-}
-@Misc{wiki,
-note = {http://fr.wikipedia.org},
-title = {Wikipedia}
-}
-@Misc{omg,
-note = {http://www.omg.org},
-title = {Site de l'Object Management Group}
-}
-@Misc{cite,
-note = {http://citeseerx.ist.psu.edu},
-title = {Librairie scientifique}
+@Misc{nanoxml,
+note = {\url{http://devkix.com/nanoxml.php}},
+title = {Site de nanoXML}
 }
