--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -1,6 +1,9 @@
 \section{Planification et gestion de projet}
 \subsection{Lighthouse}
-Lighthouse est un gestionnaire de projet. Il permet d'assigner des tâches, de les répartir et de les gérer. On peut distinguer deux entités principales, les tickets et les sprints.
+Lighthouse est un gestionnaire de projet en ligne. Il permet d'assigner des tâches, de les répartir et de les gérer.
+Cette application web a ete utilise pour notre projet.
+
+On peut distinguer deux entités principales, les tickets et les sprints.
 % Need schema pour le workflow lighthouse
 \subsection{Ticket}
 Les Tickets représentent une tâche à réaliser. Ils peuvent être crées par n'importe quel participant au projet. Ce ticket peut ensuite être assigner à une personne et possède plusieurs états.
@@ -13,52 +16,54 @@ Chacun de ces tickets peut être assigné à un sprint.
 \subsection{Sprint}
 Un sprint est un ensemble de ticket à résoudre pour une date donnée. En général, la durée d'un sprint était de 2 semaines, parfois une. A chaque fin de sprint, une réunion était organisée pour discuter des résultats, des reports à effectuer ou des tickets à créer.
 \section{Gestionnaire de version}
-Tout projet informatique se doit d'être sous gestionnaire de version. Sans compter que le fait que le projet soit open-source et actif provoquait des changements importants dans le code. Il fallait donc pouvoir travailler en parallèle aux changement opérer par les contributeurs et pour appliquer nos modifications le jour venus.
+Tout projet informatique se doit d'être sous gestionnaire de version. Sans compter le fait que le projet soit open-source et actif provoquait des changements importants dans le code. Il fallait donc pouvoir travailler en parallèle des changement opérés par les contributeurs et pouvoir appliquer facilement nos modifications le jour venu.
 
-Le dépôt de référence est un dépôt Subversion. Les contributeurs appliquent leurs modifications sur ce dépôt. Cependant, pour des raisons de facilité et pour ne pas perturber le développement, il a été décidé de travailler sur un fork Git.
+Le dépôt de référence d'IzPack est un dépôt Subversion. Les contributeurs appliquent leurs modifications sur ce dépôt. Cependant, pour des raisons de facilité et pour ne pas perturber le développement, il a été décidé de travailler sur un fork Git.
 \subsection{Git}
-Git est un gestionnaire de version récent. Il a été crée en 2004 par Linux Torvald pour remplacer BitKeeper, l'ancien gestionnaire de version du noyau linux.
+Git est un gestionnaire de version récent. Il a été crée en 2004 par Linus Torvald pour remplacer BitKeeper, l'ancien gestionnaire de version du noyau linux.
 Il s'agit, à l'instar de BitKeeper, d'un système distribué. Toutes les copies du dépôt sont elles-mêmes des serveurs.
 Chaque personne travaille donc sur son propre dépôt et se synchronise par rapport à d'autres dépôts. C'est de cet aspect distribué que provient une grande partie de la puissance de Git.
 Un utilisateur a accès à l'historique entier une fois qu'il a cloné le dépôt. Il peut effectuer toutes les operations voulues sur son dépôt en étant déconnecté et chaque clone est une sauvegarde intégrale du dépôt.
-La communication se fait soit par le protocole ssh, https, ftp, rsync ou par le protocole git.
+Ainsi, n'importe quel developpeur a acces a toutes les fonctionnalites d'un gestionnaire de version meme s'il n'est pas connecte au depot central.
+La communication entre depot Git se fait soit par le protocole ssh, https, ftp, rsync ou par le protocole git.
 
-Il apporte également des fonctionnalités évoluées. L'un des principaux points est la gestion des branches. La création, suppression et fusion des branches est remarquable de simplicité et d'efficacité.
+Git se demarque également  sur des fonctionnalités évoluées. L'un de ses principaux points forts est la gestion des branches. La création, suppression et fusion des branches est remarquable de simplicité et d'efficacité.
 La taille d'un dépôt Git est faible comparée à celle d'autres gestionnaires comme subversion.
 
-Julien Ponge entretient un dépôt Git synchronisé par rapport au Subversion. Nous avons travaillé sur ce dépôt et crée un fork.
+Julien Ponge entretient un dépôt Git synchronisé par rapport au Subversion. Nous avons travaillé sur un fork de ce dépôt.
 Nous pouvions à tout moment synchroniser notre dépôt par rapport au dépôt d'origine et ainsi, appliquer toutes les modifications des contributeurs à notre dépôt.
 Cela permettait de préparer l'application de nos modifications de manière aisée. Tout ces dépôts sont hébergés sur GitHub.
 \subsection{GitHub}
-GitHub est une plateforme collaborative. Cette plateforme permet de créer, dupliquer, supprimer ou consulter des dépôts Git.
-Il est possible de choisir de donner les droits de commit à d'autres personnes sur nos dépôts. Toutes les réalisations faites sont ouvertes et disponibles à tout le monde, c'est à dire que n'importe qui est libre de cloner ou de forker les projets présents sur GitHub.
+GitHub est une plateforme collaborative hebergeant des depots Git. Cette plateforme permet de créer, dupliquer, supprimer ou consulter des dépôts Git.
+Il est possible de donner les droits de commit à d'autres personnes sur nos dépôts. Toutes les réalisations faites sont ouvertes et disponibles à tout le monde, c'est à dire que n'importe qui est libre de consulter, cloner ou de forker les projets présents sur GitHub.
 
-Cette plateforme a été choisi par Julien Ponge pour héberger son dépot. Nous nous sommes donc créés des comptes sur GitHub et l'avons dupliqué. L'utilisation d'un dépot public basé sur celui de Julien Ponge a permis non seulement de faciliter les mises à jour, mais également de lui permettre de suivre facilement notre travail.
+Cette plateforme a été choisi par Julien Ponge pour héberger son dépot Git. Nous nous sommes donc créés des comptes sur GitHub et l'avons dupliqué. L'utilisation d'un dépot public basé sur celui de Julien Ponge a permis non seulement de faciliter les mises à jour, mais également de lui permettre de suivre facilement notre travail.
 
 
-- GitHub : Gestionnaire de dépôt Git
--> Duplicat (fork) du projet
--> Travail collaboratif et ouvert 
--> Consultation de l'historique
--> Visionnage des branches
+%- GitHub : Gestionnaire de dépôt Git
+%-> Duplicat (fork) du projet
+%-> Travail collaboratif et ouvert 
+%-> Consultation de l'historique
+%-> Visionnage des branches
 
 
 
 \section{Outils de développement}
 \subsection{IntelliJ Idea}
--> IDE spécialisée technologies Java
-Nombreuses fonctionnalités présentes
--> Recherche implementation 
--> Preserve Case
--> Refactoring puissant
+%-> IDE spécialisée technologies Java
+%Nombreuses fonctionnalités présentes
+%-> Recherche implementation 
+%-> Preserve Case
+%-> Refactoring puissant
 
-IntelliJ est un environnement de développement intégré similaire à Eclipse. Il est propriétaire et nécessite une licence pour son fonctionnement. Cependant, JetBrain, l'éditeur de IntelliJ, a une politique d'ouverture pour les projets open-source et tout ces projets bénéficient d'une licence dédiée.
+IntelliJ est un environnement de développement intégré similaire à Eclipse. Il est propriétaire et nécessite une licence pour son fonctionnement. Cependant, JetBrain, l'éditeur de IntelliJ, a une politique d'ouverture pour les projets open-source et tout ces projets bénéficient d'une licence dédiée, gratuite.
 
-Il présente certaines divergences avec les IDE comme Eclipse et NetBeans. Il possède une plus grande variété de fonctionnalités et l'intégration d'un grand nombre de composants. On trouve ainsi l'intégration de framework récent comme GWT ou d'outils comme Git. L'intégration de Maven et également très complète.
+Il présente certaines divergences avec les IDE comme Eclipse et NetBeans. Il possède une plus grande variété de fonctionnalités et l'intégration d'un grand nombre de composants. On trouve ainsi l'intégration de frameworks récents comme GWT ou d'outils comme Git. L'intégration de Maven et également très complète.
+De plus, ses capacites de modification de code (refactoring) sont au dessus de celles des autres IDE : preservation de la casse lors d'un renommage, etc.
 \subsection{Yourkit}
-Profiler Java
--> Temps, nombres d'appels des méthodes
--> Affichage de la charge a tout moment
+%Profiler Java
+%-> Temps, nombres d'appels des méthodes
+%-> Affichage de la charge a tout moment
 
 Yourkit est un outil de profiling. Il permet d'avoir un rapport détaillé sur l'utilisation des ressources par le programmes. On peut ainsi récupérer le nombre d'appel à une méthode, le temps passé dans une méthode, l'utilisation des ressources à un temps donné.
 
