--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -72,25 +72,30 @@ On a des evenements de commentaires, de text ou d'elements. L'avantages de cette
 \subsection{DOM}
 L'interface DOM(Document Object Model) de jaxp propose de mettre en memoire le xml et offre une interaction basee sur des nodes. En DOM, tout est nodes. Les commentaires, le texte ou les elements sont representes par des noeuds. Des sous-classes specialisent ces noeuds. comme Comment, Element ou Text.
 
-La manipulation des elements du xml se fait grace aux nodes. Il est possible de recuperer le voisin d'une node, d'enlever ou d'ajouter un enfant et de recuperer ou de modifier le contenue.
+La manipulation des elements du xml se fait grace aux nodes. Il est possible de recuperer le voisin d'une node, d'enlever ou d'ajouter un enfant et de recuperer ou de modifier le contenu.
 \section{Elaboration de la solution}
 Face a ce probleme, notre travail a ete de chercher une solution pour permettre de remplacer de NanoXml et de l'appliquer au projet. Mais ils y avaient plusieurs problemes a cela.
 \subsection{Les differences entre Jaxp et NanoXml}
-Comme nous avons vu precedement, les 2 api ne proposent pas la meme approche pour le traitement des Xml. Nous avons choisies d'utiliser l'interface DOM vu que les avantages de SAX ne sont pas necessaires et qu'il etait peut concevable de traiter les XML avce SAX dans IzPack.
+Comme nous avons vu precedement, les 2 api ne proposent pas la meme approche pour le traitement des Xml. Nous avons choisies d'utiliser l'interface DOM vu que les avantages de SAX ne sont pas necessaires et qu'il etait peu concevable de traiter les XML avec SAX dans IzPack.
 
 Nous allons donc comparer l'interface DOM et NanoXml pour determiner la meilleure approche a prendre.
 \subsubsection{Parse du XML}
-\subsubsection{Utilisation du XML}
 
+\subsubsection{Manipulation du XML}
+La principale difference vient de l'element atomique : le noeud de DOM ne represente pas la meme notion que l'element de nanoXML. Des lors, la manipulation des voisins, enfants, etc doit etre adapte.
 \begin{verbatim}
-<!--comment>commentaire<comment-->
+<!-- commentaire -->
 <root>
 	<noeud1>text</noeud1>
 </root>
-
-Nano -> root possede 1 enfant
-DOM -> root possede 3 enfants (\n; <noeud1>; \n)
 \end{verbatim}
+Dans ce morceau de xml, nanoXML comptera 1 enfant a l'element \verb|root|, \verb|noeud1|. DOM comptera 3 noeuds : du texte (le retour a la ligne et la tabulation), \verb|noeud1| et a nouveau du texte (un retour a la ligne).
+
+DOM possede neanmoins une interface, \verb|Element|, qui correspond a l'interface \verb|IXMLElement| de nanoXML.
+
+\subsubsection{Methode getContent}
+pas pareil, mais pas d'exemple en tete
+
 \subsection{Remplacer les appels}
 \subsection{Utilisation d'un design pattern}
 Extraction d'interface du xmlElement.
@@ -107,8 +112,26 @@ Xfragment Non present dans la specifiaction W3C:
 -> Permet include de noeuds sans racines
 Passage par une feuille XSL
 -> include puis suppression des Xfragment
+
+\subsubsection{Numero de ligne}
+Une fonctionnalite de nanoXML est la gestion des numeros de lignes. Lors qu'une incoherence est detectee dans un xml lu, IzPack previent l'utilisateur de l'erreur, et indique le numero de la ligne responsable dans le xml.
+
+Du point de vue de DOM, les numeros de lignes n'ont pas de signification : une fois le fichier xml parse, seul l'arbre DOM construit en memoire importe. Cet arbre reecrit dans un fichier ne correspondra pas forcement (pour les numeros de lignes, l'indentation, etc) au fichier de depart, sans parler des ajouts/suppressions/modifications de noeuds.
+
+A l'inverse du point de vue de SAX, les numeros de lignes sont obtenu facilement. Dans ce cas la, il est utile de savoir a quel endroit on se trouve dans le document.
+
+Afin d'obtenir les numeros de ligne dans un arbre DOM, les deux points de vue ont ete utilises grace a un Transformer.
+On cree une source SAX, a laquelle on ajoute un filtre pour ecouter les evenements (et stocker les numeros de lignes en cas de debut de balise).
+En parallele, on cree un resultat DOM, qui contiendra le resultat du parse (l'arbre DOM).
+Enfin, on utilise un Transformer : il va utiliser la source SAX (les numeros de lignes sont stockees) et remplir le resultat DOM.
+Il suffit de parcourir l'arbre DOM pour ajouter a chaque element son numero de ligne.
+Ce nombre est stocke dans les ``user data'', ajoute dans la version 3  de DOM pour stocker diverses informations supplementaires dans un noeud.
+
 \section{Application et tests}
 \subsection{Test unitaires de comparaison}
+Afin d'avoir un comportement le plus fidele possible a celui de nanoXML, de nombreux tests unitaires ont ete ecrits.
+Ces tests unitaires effectuent des actions identiques avec DOM et nanoXML, et compare les resultats.
+En couvrant la quasi-totalite des methodes utilises dans IzPack avec de nombreux cas d'utilisation, nous avons pu assurer un comportement fidele.
 Comparaison entre le comportement de nanoXml et de l'adaptateur
 \subsection{Integration a IzPack}
 \subsection{Test Globale et Profiling}
