--- a/latex/glossaire.tex
+++ b/latex/glossaire.tex
@@ -1,4 +1,5 @@
 \begin{description}
 	\item[XML] eXtensible Markup Language. C'est un langage descriptif, qui permet de decrire pratiquement tout. Il est beaucoup utilise dans IzPack.
 	\item[fork] Dans GitHub, un fork permet de creer un nouveau depot attache a son compte, dupliquant un autre depot heberge par GitHub.
+	\item[W3C] World Wide Web Consortium. C'est le groupe a l'origine de la specification du XML.
 \end{description}
