--- a/latex/master.tex
+++ b/latex/master.tex
@@ -49,7 +49,7 @@ pdfpagemode= UseOutlines,
 
 \title{Refactoring IzPack}
 \author{Anthonin Bonnefoy, David Duponchel}
-\lstset{language=C++}
+\lstset{language=Java}
 \begin{document}
 
 \renewcommand{\headrulewidth}{0pt}
