Images for the description of the solution Description of solutions

--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -55,16 +55,14 @@ Cette plateforme a été choisi par Julien Ponge pour héberger son dépot Git. 
 %-> Recherche implementation 
 %-> Preserve Case
 %-> Refactoring puissant
+IntelliJ est un environnement de développement intégré similaire à Eclipse. Il est propriétaire et nécessite une licence pour son fonctionnement. Cependant, JetBrain, l'éditeur de IntelliJ, a une politique d'ouverture pour les projets open-source. Les projets sous CodeHaus et Apache bénéficient d'une licence dédiée et gratuite. 
 
-IntelliJ est un environnement de développement intégré similaire à Eclipse. Il est propriétaire et nécessite une licence pour son fonctionnement. Cependant, JetBrain, l'éditeur de IntelliJ, a une politique d'ouverture pour les projets open-source et tout ces projets bénéficient d'une licence dédiée, gratuite.
-
-Il présente certaines divergences avec les IDE comme Eclipse et NetBeans. Il possède une plus grande variété de fonctionnalités et l'intégration d'un grand nombre de composants. On trouve ainsi l'intégration de frameworks récents comme GWT ou d'outils comme Git. L'intégration de Maven et également très complète.
-De plus, ses capacites de modification de code (refactoring) sont au dessus de celles des autres IDE : preservation de la casse lors d'un renommage, etc.
+Il présente certaines divergences avec des IDE comme Eclipse et NetBeans. Il possède une plus grande variété de fonctionnalités et l'intégration d'un grand nombre de composants. On trouve ainsi l'intégration de frameworks récents comme GWT ou d'outils comme Git. L'intégration de Maven et également très complète.
+De plus, ses capacites de modification de code (refactoring) sont au dessus de celles des autres IDE : preservation de la casse lors d'un renommage, etc...
 \subsection{Yourkit}
 %Profiler Java
 %-> Temps, nombres d'appels des méthodes
 %-> Affichage de la charge a tout moment
-
 Yourkit est un outil de profiling. Il permet d'avoir un rapport détaillé sur l'utilisation des ressources par le programmes. On peut ainsi récupérer le nombre d'appel à une méthode, le temps passé dans une méthode, l'utilisation des ressources à un temps donné.
 
 Le but du profiling a été de repérer les optimisations possibles sur les modifications que l'on a opérées.
