--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -96,21 +96,27 @@ DOM possede neanmoins une interface derivant de \verb|Node|, \verb|Element|, qui
 pas pareil, mais pas d'exemple en tete
 \subsection{Solutions possibles}
 Pour remplacer NanoXml, plusieurs approches etaient possibles. 
-\subsubsection{Remplacer les appels}
+\subsubsection{Remplacer les appels individuellements}
 La premiere solution, bete et mechante, est de remplacer systematiquement les appels de NanoXml par des appels de Jaxp. Cependant, cette solution a des inconvenients evidents :
-\begin{list}
+\begin{description}
 \item[La duplication de la logique] Tout le code necessaire a l'appel du parseur ou du Node est repartie et duplique dans tout le programme. C'est d'abord une infraction au principe dry (don't repeat yourself) et rend le code difficile a maintenir. Les bugs sont plus difficiles a cibler et la correction doit se faire sur toutes les replications.
 \item[Les difficultees de tester la solution] Un autre probleme et le test de cette solution. Il faut en theorie passer par toute les utilisations des appels pour tester correctement la solution. Cette contrainte est difficilement realisable.
-\item[]
-\end{list}
-\subsubsection{Utilisation d'un design pattern}
-Extraction d'interface du xmlElement.
--> IXmlElements
--> IXmlParser
--> IXmlWriter
+\item[La penibilite de la tache] Remplacer chacun des nombreux appels a NanoXml par un appel Jaxp est tres laborieux. 
+\end{description}
+\subsubsection{Centraliser la logique de modification}
+L'autre solution possible est de centraliser toute la logique de tansaction dans des classes dediees. Ces classes vont copier les interfaces de NanoXml mais vont generer des appels a Jaxp en backend. C'est le principe du design pattern adaptateur.
 
-XMLElements de NanoXml ~ Node Element
+Cela presente plusieurs avantages.
+\begin{description}
+\item[Centralisation de la logique] Toute la logique de traduction est centralisee en un endroit. Il est facile de corrige les eventuelles erreurs.
+\item[Rapidite de deploiement] L'adaptateur presente l'avantage de ne pas changer la logique d'utilisation. Les changements d'appels se resument a changer le nom de la classe et les imports.
 \subsection{Creation de l'adaptateur}
+Nous avons donc choisi la solution de l'adaptateur pour notre probleme. Pour cela, nous avons proceder en plusieurs etapes.
+\subsection{Reperer les utilisations des classes de NanoXml}
+Dans un premier temps, nous avons reperer les classes utilisees par Izpack et les methodes de ces classes utilisees. Nous avons reduits l'utilisation de NanoXml a 3 classes : StdXMLParser, StdXMLWriter et XMLElement. 
+\subsubsection{StdXMLParser et StdXMLWriter}
+StdXMLParser et StdXMLWriter sont utilisees avec parcimonie. On compte une trentaine d'utilisation pour StdXMLParser et 8 utilisations pour StdXMLWriter. Modifier l'interface pour ces deux classes n'etaient pas un probleme. Ces deux classes ont donc ete remplacees par 2 nou
+\subsubsection{XmlElement}
 \subsubsection{Xinclude}
 La balise \verb|xinclude| permet d'inclure un fichier xml externe. Ainsi, on peut utiliser un xml très succinct (et donc facilement lisible/compréhensible) qui inclut d'autres fichiers xml decrivant uniquement certaines parties de l'installation. Cette fonctionnalite, absente de nanoXML, a ete mise en place en modifiant directement le code se son parseur.
 
@@ -129,9 +135,7 @@ La fonctionnalite Xfragment n'est pas presente dans les specifications. Elle per
 \end{lstlisting}
 Si ce xml est rajoute, 2 elements, <root1> et <root2> seront rajoute a l'emplacement du Xinclude. Sans le xfragment, le Xml ne serait pas valide et il y aurait erreur au moment du parse. Le Xfragment agit ici comme contenaire temporaire d'elements.
 
-Cette fonctionnalite a ete rajoute a NanoXml et il etait necessaire de la conserver. Cependant, elle ne fait pas partie des specifications W3C et le parseur n'offrait pas de base cette fonctionnalite. Il a fallut trouver une 
-
-
+Cette fonctionnalite a ete rajoute a NanoXml et il etait necessaire de la conserver. Cependant, elle ne fait pas partie des specifications W3C et le parseur n'offrait pas de base cette fonctionnalite. Il a fallut trouver une solution pour 
 \subsubsection{Numero de ligne}
 Une fonctionnalite de nanoXML est la gestion des numeros de lignes. Lors qu'une incoherence est detectee dans un xml lu, IzPack previent l'utilisateur de l'erreur, et indique le numero de la ligne responsable dans le xml.
 
